Small bugs with rooster on mouse click swipe, but on mobile it's great.

--- a/Zermos-Web/wwwroot/css/zermelo.css
+++ b/Zermos-Web/wwwroot/css/zermelo.css
@@ -6,25 +6,31 @@
 }
 
 .main-container .week-carousel {
-    flex: 1;
-    width: 300%;
-    min-width: 300%;
+    width: 100%;
+    min-width: 100%;
     height: 100%;
-    overflow: hidden;
     display: flex;
-    will-change: transform;
-    transform: translateX(-33.3333%);
+    flex-direction: row;
+    white-space: nowrap;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .main-container .week {
     position: relative;
-    min-width: 33.33%;
-    width: 33.33%;
-    flex: 1;
+    min-width: 100%;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
     overflow: hidden;
     display: flex;
     border: 1px solid var(--inactive-color);
     border-radius: var(--border-radius);
+    
+    scroll-snap-align: start;
 }
 
 .rooster {
